--- a/resources/package.json
+++ b/resources/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "axios": "^0.19.0",
     "axios-hooks": "^1.3.0",
+    "core-js": "^3.2.1",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "regenerator-runtime": "^0.13.3"
   },
   "scripts": {
     "dev": "webpack --mode=development",
