--- a/resources/package.json
+++ b/resources/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.6.0",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
@@ -16,8 +17,7 @@
     "axios": "^0.19.0",
     "axios-hooks": "^1.3.0",
     "core-js": "^3.2.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "preact": "10.0.0-rc.3",
     "regenerator-runtime": "^0.13.3"
   },
   "scripts": {
